- Added fast selling with shift+left click. Also fixed a bug where sold items could not be bought back

--- a/style.css
+++ b/style.css
@@ -1083,6 +1083,7 @@ input[type=number]::-webkit-inner-spin-button {
     position: absolute;
     top: 85%;
     left: 20%;
+    width: 220px;
 }
 
 #inventoryArea {
